[package]
name = "backend"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
env_logger = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
juniper = "*"
listenfd = "0.3"